--- a/src/components/styles/Display.scss
+++ b/src/components/styles/Display.scss
@@ -1,40 +1,32 @@
+
+
 .display {
   display: flex;
   flex-direction: column;
   padding: 10px;
-  border-top-left-radius: 10px;
-  border-top-right-radius: 10px;
-  padding-bottom: 20px;
-  background: linear-gradient(90deg, #06beb6, #48b1bf 100%);
+  border-top-left-radius: 18px;
+  border-top-right-radius: 18px;
+  background:#F1F2F3;
 }
-
-.expression {
-  padding: 5px;
-  margin-bottom: 10px;
-  height: 50px;
-}
-
 .input,
 .value {
   padding: 10px;
   text-align: right;
   background-color: transparent;
-  color: white;
+  color: #252525;
   border: 0px;
   letter-spacing: 1.5px;
 }
 
 .input {
-  font-size: 35px;
+  font-size: 96px;
 }
-
 .value {
-  font-size: 15px;
+  font-size: 18px;
 }
-
 .input::placeholder,
 .value::placeholder {
-  color: white;
+  color: #252525;
 }
 
 .input:focus-visible,
