--- a/src/components/styles/Calculator.scss
+++ b/src/components/styles/Calculator.scss
@@ -1,3 +1,5 @@
+@import "./_Assets";
+
 .container {
   background-color: #dfe9f5;
   min-height: 100vh;
@@ -5,10 +7,11 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
+  row-gap: 1rem;
   
   .main {
     border: 0px;
-    box-shadow: 0px 0px 3px 0.5px #c4e0e5;
     border-radius: 8px;
     max-width: 380px;
   }
@@ -20,3 +23,7 @@
     height: 100%;
   }
 }
+
+@include switch;
+@include buttonDarkTheme;
+@include displayDarkTheme;
