--- a/src/components/styles/__Assets.scss
+++ b/src/components/styles/__Assets.scss
@@ -123,3 +123,15 @@
     background-color: #2bc6ff;
   }
 }
+
+
+.light {
+  // Display
+  .display {
+    background: #F1F2F3;
+  }
+
+  .input, .value {
+    color: #252525;
+  }
+}
