--- a/src/components/styles/Display.scss
+++ b/src/components/styles/Display.scss
@@ -6,7 +6,7 @@
   padding: 10px;
   border-top-left-radius: 18px;
   border-top-right-radius: 18px;
-  // background:#F1F2F3;
+  background:#F1F2F3;
   min-height: 10rem;
 }
 .input,
@@ -24,7 +24,7 @@
 }
 .value {
   font-size: 24px;
-  color: #919192;
+  color: #878787;
 }
 .input::placeholder,
 .value::placeholder {
