--- a/src/components/styles/Button.scss
+++ b/src/components/styles/Button.scss
@@ -6,10 +6,9 @@
   border-bottom-left-radius: 8px;
   border-bottom-right-radius: 8px;
   padding:20px;
+  background-color: #F1F2F3;
   padding-bottom:40px;
   
-  @include buttonLightTheme();
- 
   .btn {
     width:72px;
     height:72px;
@@ -19,6 +18,25 @@
     cursor: pointer;
     border-radius: 24px;
     border: 0px;
-
+    background-color: white;
+    &:hover{
+      background-color: #FF8F00;
+      color: white;
+      transition: background-color 0.2s ease;
+    }&:active {
+      background-color: #FF8F00;
+      color: white;
+      transition: background-color 0.2s ease;
+    }
+  }
+  .clr {
+    color:#252525;
+  }
+  .exp {
+   color: white;
+    background-color: #4B5EFC;
+  }
+  .op{
+    background-color: #D2D3DA;
   }
 }
