--- a/src/components/styles/Display.scss
+++ b/src/components/styles/Display.scss
@@ -6,7 +6,7 @@
   padding: 10px;
   border-top-left-radius: 18px;
   border-top-right-radius: 18px;
-  background:#F1F2F3;
+  // background:#F1F2F3;
   min-height: 10rem;
 }
 .input,
@@ -14,7 +14,7 @@
   padding: 10px;
   text-align: right;
   background-color: transparent;
-  color: #252525;
+  // color: #252525;
   border: 0px;
   letter-spacing: 1.5px;
 }
@@ -24,7 +24,7 @@
 }
 .value {
   font-size: 24px;
-  color: #878787;
+  // color: #919192;
 }
 .input::placeholder,
 .value::placeholder {
