--- a/src/components/styles/Calculator.scss
+++ b/src/components/styles/Calculator.scss
@@ -18,9 +18,14 @@
 }
 
 @media (max-width: 600px) {
+  .container {
+    min-width: 100vw;
+    min-height: 100vh;
+  }
+
   .main {
-    width: 100%;
-    height: 100%;
+    min-width: 100%;
+    min-height: 100%;
   }
 }
 
