--- a/src/components/styles/_asset.scss
+++ b/src/components/styles/_asset.scss
@@ -18,6 +18,49 @@
   
 }
 
+// Toggle 
+@mixin switch {
+  .toggle-switch {
+    position: relative;
+    display: inline-block;
+    width: 50px;
+    height: 25px;
+    margin: 0 0.75rem;
+  }
+  .toggle-switch input[type="checkbox"] {
+    display: none;
+  }
+  .toggle-switch .switch {
+    position: absolute;
+    cursor: pointer;
+    background-color: #b6b6b6;
+    border-radius: 25px;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    transition: background-color 0.2s ease;
+  }
+  .toggle-switch .switch::before {
+    position: absolute;
+    content: "";
+    left: 2px;
+    top: 2px;
+    width: 21px;
+    height: 21px;
+    background-color: #333;
+    border-radius: 50%;
+    transition: transform 0.3s ease;
+  }
+  .toggle-switch input[type="checkbox"]:checked + .switch::before {
+    transform: translateX(25px);
+    background-color: #333;
+  }
+  .toggle-switch input[type="checkbox"]:checked + .switch {
+    background-color: #2bc6ff;
+  }
+}
+
 
 //color
 $white: #fff;
@@ -35,7 +78,91 @@ $hr:'Helvetica Rounded';
 $os:'Open Sans';
 $ox:'Oxanium';
 
-$b-image:url(../images/background-top-text.png)
+$b-image:url(../images/background-top-text.png);
 
+// LIGHT THEME
+.light {
+  // Display
+  .display {
+    background: #F1F2F3;
+    color: #252525;
+  }
+
+  .value {
+    color: #878787;
+  }
+
+  .input {
+    color: #252525;
+  }
+
+  .input, .value::placeholder {
+    color: #252525;
+  }
+
+  // Button
+  .show-btn {
+    background-color: #F1F2F3;
+
+    .btn:hover {
+      background-color: #ff8f00;
+      color: white;
+    }
+
+    .exp {
+      color: white;
+       background-color: #4B5EFC;
+     }
+     .op{
+       background-color: #D2D3DA;
+     }
+
+  }  
+}
+
+// DARK THEME
+.dark {
+  // Display
+  .display {
+    background: #17171c;
+  }
+
+  .value {
+    color: #878787;
+  }
+
+  .input {
+    color: #fff;
+  }
+
+  .input, .value::placeholder {
+    color: #fff;
+  }
+
+  // Buttons
+  .show-btn {
+    background-color: #17171c;
+    color: white;
+
+    .btn {
+      background-color: #2E2F38;
+      color: white;
+    }
+
+    .btn:hover {
+      background-color: #ff8f00;
+      color: white;
+    }
+
+    .exp {
+      color: white;
+       background-color: #4B5EFC;
+     }
+     .op{
+       background-color: #4e505f;
+     }
+  } 
+
+}
 
 
