--- a/src/components/styles/Calculator.scss
+++ b/src/components/styles/Calculator.scss
@@ -1,6 +1,6 @@
-@import "./_Assets";
+@import "./asset";
 
-.container {
+.container-calc {
   background-color: #dfe9f5;
   min-height: 100vh;
   min-width: 100%;
