bug can't touch switch

--- a/src/components/styles/Calculator.scss
+++ b/src/components/styles/Calculator.scss
@@ -9,7 +9,7 @@
   justify-content: center;
   flex-direction: column;
   row-gap: 1rem;
-  margin-top: 3.2rem;
+  margin-top: 64px;
   
   .main {
     border: 0px;
